Apply suggestions from code review
Updates for suggested italian translations from review

Co-authored-by: Paolo Bizzarri <pibizza@gmail.com>

--- a/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants_it.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants_it.properties
@@ -27,10 +27,10 @@ TemplateParamsFormView.SecretsFileURL=Secrets
 TemplateParamsFormView.RuntimeName=Nome runtime
 TemplateParamsFormView.TemplateParameters=Parametri del template
 
-TemplateParamsTableView.ParamNameColumn=Nome parametro
+TemplateParamsTableView.ParamNameColumn=Nome del parametro
 TemplateParamsTableView.ParamRequiredColumn=Obbligatorio
 TemplateParamsTableView.ParamValueColumn=Valore
-TemplateParamsTableView.ParamsEmptyTableCaption=nessun parametro
+TemplateParamsTableView.ParamsEmptyTableCaption=Nessun parametro
 
 TemplateParamsFormPresenter.GetTemplateFileConfigError=Si è verificato un errore durante il recupero del contenuto del template dal server
 TemplateParamsFormPresenter.RequiredParamsNotCompletedMessage=*i parametri obbligatori non sono ancora stati completati
