--- a/kie-wb-common-ala/kie-wb-common-ala-wildfly/kie-wb-common-ala-wildfly-ui/kie-wb-common-ala-wildfly-ui-client/src/main/resources/org/guvnor/ala/ui/wildfly/client/resources/i18n/GuvnorAlaWildflyUIConstants_it.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-wildfly/kie-wb-common-ala-wildfly-ui/kie-wb-common-ala-wildfly-ui-client/src/main/resources/org/guvnor/ala/ui/wildfly/client/resources/i18n/GuvnorAlaWildflyUIConstants_it.properties
@@ -24,4 +24,4 @@ WF10ProviderConfigView.Port=Porta
 WF10ProviderConfigView.ManagementPort=Porta di gestione
 WF10ProviderConfigView.UserName=Nome utente
 WF10ProviderConfigView.Password=Password
-WF10ProviderConfigView.TestConnection=Testa connessione
+WF10ProviderConfigView.TestConnection=Testa la connessione
