--- a/kie-wb-common-forms/kie-wb-common-dynamic-forms/kie-wb-common-dynamic-forms-client/src/main/resources/org/kie/workbench/common/forms/dynamic/client/resources/i18n/FormRenderingConstants_it.properties
+++ b/kie-wb-common-forms/kie-wb-common-dynamic-forms/kie-wb-common-dynamic-forms-client/src/main/resources/org/kie/workbench/common/forms/dynamic/client/resources/i18n/FormRenderingConstants_it.properties
@@ -23,13 +23,13 @@ FieldProperties.addEmptyOption=Aggiungi opzione vuota predefinita
 
 FieldProperties.showTime=Mostra ora
 
-FieldProperties.picture.size=Dimensione immagine
+FieldProperties.picture.size=Dimensione dell''immagine
 
 FieldProperties.selector.options=Opzioni
 FieldProperties.selector.options.value=Valore
 FieldProperties.selector.options.text=Testo
 
-FieldProperties.radios.inline=Mostra opzioni in linea
+FieldProperties.radios.inline=Mostra le opzioni in linea
 
 FieldProperties.slider.min=Valore minimo
 FieldProperties.slider.max=Valore massimo
@@ -51,16 +51,16 @@ ListBoxFieldRenderer.emptyOptionText=-- Seleziona un valore --
 FieldProperties.maxDropdownElements=Elementi visibili nella selezione
 FieldProperties.maxElementsOnTitle=Elementi visibili nel titolo della selezione
 FieldProperties.allowFilter=Mostra filtro di ricerca
-FieldProperties.allowClearSelection=Mostra azione di cancellazione selezione
+FieldProperties.allowClearSelection=Mostra l''azione di cancellazione della selezione
 
 FieldProperties.listOfValues=Elementi del selettore
 
 FieldProperties.pageSize=Dimensione pagina
 
 LOVCreationComponentViewImpl.addButton=Aggiungi nuovo
-LOVCreationComponentViewImpl.removeButton=Rimuovi elementi selezionati
-LOVCreationComponentViewImpl.moveUp=Sposta in alto elementi selezionati
-LOVCreationComponentViewImpl.moveDown=Sposta in basso elementi selezionati
+LOVCreationComponentViewImpl.removeButton=Rimuovi gli elementi selezionati
+LOVCreationComponentViewImpl.moveUp=Sposta in alto gli elementi selezionati
+LOVCreationComponentViewImpl.moveDown=Sposta in basso gli elementi selezionati
 LOVCreationComponentViewImpl.noItems=Nessun elemento
 
 EditableColumnGenerator.valueHeader=Valore
