--- a/kie-wb-common-forms/kie-wb-common-forms-commons/kie-wb-common-forms-crud-component/src/main/resources/org/kie/workbench/common/forms/crud/client/resources/i18n/CrudComponentConstants_it.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-commons/kie-wb-common-forms-crud-component/src/main/resources/org/kie/workbench/common/forms/crud/client/resources/i18n/CrudComponentConstants_it.properties
@@ -1,7 +1,7 @@
 CrudComponentViewImpl.newInstanceButton=Nuova istanza
-CrudComponentViewImpl.newInstanceTitle=Crea nuova istanza
+CrudComponentViewImpl.newInstanceTitle=Crea una nuova istanza
 CrudComponentViewImpl.editInstanceButton=Modifica
-CrudComponentViewImpl.editInstanceTitle=Modifica istanza
+CrudComponentViewImpl.editInstanceTitle=Modifica l''istanza
 CrudComponentViewImpl.deleteInstance=Elimina
 CrudComponentViewImpl.deleteBody=Sei sicuro?
 
