--- a/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_it.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_it.properties
@@ -24,8 +24,8 @@ FormEditorPresenter.unexpectedError=Si è verificato un errore imprevisto durant
 FormEditorPresenter.formUsages= Modulo: <B><I>{0}</I></B> è utilizzato nelle seguenti risorse, vuoi comunque eliminarlo?
 FormEditorPresenter.layoutTitle=Crea un nuovo modulo
 FormEditorPresenter.layoutSubTitle=Trascina un componente qui per iniziare a creare un nuovo modulo.
-FormEditorPresenter.componentsPalette=Controlli modulo
-FormEditorPresenter.modelFields=Campi modello
+FormEditorPresenter.componentsPalette=Controlli del modulo
+FormEditorPresenter.modelFields=Campi del modello
 
 FieldPropertiesRendererViewImpl.accept=Accetta
 
@@ -38,9 +38,9 @@ FormModelsViewImpl.ModelType=Seleziona il tipo di modello:
 FormDefinitionResourceType.formTypeShortName=Modulo
 FormDefinitionResourceType.formTypeDescription=Moduli
 
-DataObjectsAdminViewImpl.dataObjectID=Identificatore oggetto dati
+DataObjectsAdminViewImpl.dataObjectID=Identificatore del''oggetto dati
 DataObjectsAdminViewImpl.dataObjectType=Tipo oggetto dati
-DataObjectsAdminViewImpl.addDataObject=Aggiungi oggetto dati
+DataObjectsAdminViewImpl.addDataObject=Aggiungi un oggetto dati
 DataObjectsAdminViewImpl.idCannotBeEmpty=L''ID dell''oggetto dati non può essere vuoto.
 DataObjectsAdminViewImpl.idAreadyExists=L''ID dell''oggetto dati deve essere univoco, esiste già un oggetto dati con lo stesso ID.
 DataObjectsAdminViewImpl.typeCannotBeEmpty=Il tipo di oggetto dati non può essere vuoto.
@@ -49,8 +49,8 @@ DataObjectsAdminViewImpl.remove=Rimuovi
 DataObjectsAdminViewImpl.dataObjectIsBoundMessage=L''oggetto dati specificato è associato a alcuni campi. Sei sicuro di volerlo rimuovere?
 DataObjectsAdminViewImpl.areYouSureRemoveDataObject=Sei sicuro di voler rimuovere l''oggetto dati specificato?
 
-FieldPropertiesRendererViewImpl.title=Proprietà campo
-FieldPropertiesRendererViewImpl.fieldType=Tipo campo
+FieldPropertiesRendererViewImpl.title=Proprietà del campo
+FieldPropertiesRendererViewImpl.fieldType=Tipo del campo
 FieldPropertiesRendererViewImpl.fieldBinding=Associazione campo
 
 ChangesNotificationDisplayer.title=Notifica - Ci sono alcune modifiche nel tuo modulo.
@@ -65,11 +65,11 @@ ModelProperty.typeConflict2=Il campo del modulo verrà cambiato nel tipo di camp
 
 NestedFormsConflictHandler.nestedForm=: Il campo SottoModulo è configurato per utilizzare un modulo che non esiste.
 NestedFormsConflictHandler.creationForm=: Il campo MultipleSottoModulo sta cercando di utilizzare un modulo per la creazione di istanze che non esiste.
-NestedFormsConflictHandler.editionForm=: Il campo MultipleSottoModulo sta cercando di utilizzare un modulo per la modifica di istanze che non esiste.
+NestedFormsConflictHandler.editionForm=: Il campo MultiSottoModulo sta cercando di utilizzare un modulo per la modifica di istanze che non esiste.
 NestedFormsConflictHandler.fix=Le impostazioni del campo verranno modificate per evitare problemi, per favore modifica il campo e seleziona il modulo corretto.
 
-showMore=Mostra dettagli
-showLess=Nascondi dettagli
+showMore=Mostra i dettagli
+showLess=Nascondi i dettagli
 
 ErrorMessageDisplayerViewImpl.title=Errore
 ErrorMessageDisplayerViewImpl.errorMessage=Si è verificato un errore durante il caricamento del modulo:
@@ -77,6 +77,6 @@ ErrorMessageDisplayerViewImpl.close=Chiudi l''editor dei moduli (consigliato)
 ErrorMessageDisplayerViewImpl.closeAndReview=Chiudi l''editor dei moduli e verifica il {0} (consigliato)
 ErrorMessageDisplayerViewImpl.continue=Procedi con l''editor dei moduli
 
-FormEditorService.shortKey=Impossibile caricare il modulo a causa di un errore sul server. Prova a chiudere il modulo e riaprilo e se il problema persiste, contatta l''amministratore.
-FormEditorService.longKey=Impossibile caricare il modulo a causa di un errore sul server. Prova a chiudere il modulo e riaprilo e se il problema persiste, contatta l''amministratore. <br/>Messaggio di errore completo: <br/>{0}
-FormEditorPresenter.propertiesEditor=Proprietà campo
+FormEditorService.shortKey=Impossibile caricare il modulo a causa di un errore sul server. Prova a chiudere e riaprire il modulo.  Se il problema persiste, contatta l''amministratore.
+FormEditorService.longKey=Impossibile caricare il modulo a causa di un errore sul server. Prova a chiudere e riaprire il modulo. Se il problema persiste, contatta l''amministratore. <br/>Messaggio di errore completo: <br/>{0}
+FormEditorPresenter.propertiesEditor=Proprietà del campo
