--- a/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_it.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_it.properties
@@ -6,7 +6,7 @@ JBPMFormModelCreationViewImpl.StartProcessForm=Avvia Form Processo ({0})
 JBPMFormModelCreationViewImpl.TaskName=Form Attività per '{0}' ({1})
 
 org.kie.workbench.common.forms.jbpm.model.authoring.process.BusinessProcessFormModel=Processo Aziendale
-org.kie.workbench.common.forms.jbpm.model.authoring.task.TaskFormModel=Form Attività
+org.kie.workbench.common.forms.jbpm.model.authoring.task.TaskFormModel=Form di Attività
 
 MissingProcess.shortMessage=Impossibile trovare il Processo con ID '{0}' nel progetto.
 MissingProcess.fullMessage=Impossibile trovare il Processo con ID '{0}' nel progetto. \
@@ -22,7 +22,7 @@ MissingTask.fullMessage=Impossibile trovare l''Attività con nome '{0}' nel Proc
 
 process=Processo
 
-FieldProperties.maxDocuments=Numero massimo documenti
+FieldProperties.maxDocuments=Numero massimo di documenti
 FieldProperties.maxDocuments.helpMessage=Specifica quanti documenti possono essere aggiunti al campo. Se il valore è 0, \
   non ci sarà alcun limite. Qualsiasi altro valore uguale o superiore a 1 imposterà il limite di documenti.
 
