--- a/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/resources/org/kie/workbench/common/screens/archetype/mgmt/client/resources/i18n/ArchetypeManagementConstants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/resources/org/kie/workbench/common/screens/archetype/mgmt/client/resources/i18n/ArchetypeManagementConstants_it.properties
@@ -13,8 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-ArchetypeManagement.ArchetypeManagementPerspectiveName=Gestione Archetipi
-ArchetypeManagement.AddArchetype=Aggiungi Archetipo
+ArchetypeManagement.ArchetypeManagementPerspectiveName=Gestione degli Archetipi
+ArchetypeManagement.AddArchetype=Aggiungi un Archetipo
 ArchetypeManagement.Add=Aggiungi
 ArchetypeManagement.Delete=Elimina
 ArchetypeManagement.Cancel=Annulla
@@ -26,8 +26,8 @@ ArchetypeManagement.ArchetypeDeletedMessage=Archetipo eliminato con successo.
 ArchetypeManagement.ArchetypeValidatedMessage=Archetipo convalidato con successo.
 ArchetypeManagement.ArchetypeAlreadyExistsMessage=C''è già un archetipo aggiunto con le informazioni fornite.
 ArchetypeManagement.InvalidArchetypeExceptionMessage=L''archetipo fornito non può essere aggiunto perché non è un modulo KIE valido.
-ArchetypeManagement.MavenExecutionExceptionMessage=Dettagli errore: {0}
-ArchetypeManagement.DeleteArchetypeTitle=Elimina Archetipo
+ArchetypeManagement.MavenExecutionExceptionMessage=Dettagli dell''errore: {0}
+ArchetypeManagement.DeleteArchetypeTitle=Elimina l''Archetipo
 ArchetypeManagement.DeleteArchetypeMessage=Sei sicuro di voler eliminare definitivamente questo archetipo? Questa azione non può essere annullata.
 ArchetypeManagement.OfN=di {0}
 ArchetypeManagement.ItemCountIndicatorText={0}-{1} di {2}
