--- a/kie-wb-common-screens/kie-wb-common-datasource-mgmt/kie-wb-common-datasource-mgmt-client/src/main/resources/org/kie/workbench/common/screens/datasource/management/client/resources/i18n/DataSourceManagementConstants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-datasource-mgmt/kie-wb-common-datasource-mgmt-client/src/main/resources/org/kie/workbench/common/screens/datasource/management/client/resources/i18n/DataSourceManagementConstants_it.properties
@@ -32,7 +32,7 @@ DataSourceDefEditor.LoadDriversErrorMessage=Inizializzazione dell''editor non ri
 DataSourceDefEditor.ConnectionTestSuccessfulMessage=Test di connessione riuscito
 DataSourceDefEditor.ConnectionTestFailedMessage=Test di connessione non riuscito
 
-DataSourceDefEditorViewImpl.browseContent=Sfoglia contenuto
+DataSourceDefEditorViewImpl.browseContent=Sfoglia il contenuto
 
 DataSourceDefEditor.DataSourceHasBeenReferencedForDeleteMessage=Il data source corrente è stato referenziato.\
   <BR>La cancellazione potrebbe causare errori nei client dipendenti.\
@@ -87,7 +87,7 @@ DataSourceDefExplorerScreen.Refresh=Aggiorna
 DataSourceDefExplorerScreenViewImpl.projects=Progetti
 DataSourceDefExplorerScreenViewImpl.global=Globale
 
-DataSourceSelector.Title=Selettore data source
+DataSourceSelector.Title=Selettore del data source
 DataSourceSelector.NoAvailableDataSourcesMessage=Non ci sono data source disponibili
 DataSourceSelector.DataSourceColumn=Data source
 DataSourceSelector.SelectButton=Seleziona
@@ -107,7 +107,7 @@ DatabaseObjectExplorerViewImpl.loadingDbObjects=Caricamento oggetti del database
 DatabaseObjectExplorerViewImpl.loadingDbSchemas=Caricamento schemi del database
 DatabaseObjectExplorerViewImpl.schema=Schema
 DatabaseObjectExplorerViewImpl.dbObjectType=Tipo di oggetto del database
-DatabaseObjectExplorerViewImpl.namePattern=Filtro nome
+DatabaseObjectExplorerViewImpl.namePattern=Filtro per nome
 DatabaseObjectExplorerViewImpl.namePatternHelp=filtro per nome per la ricerca
 DatabaseObjectExplorerViewImpl.filter=Filtro
 DatabaseObjectExplorerViewImpl.dbObjectNameColumn=Nome
