--- a/kie-wb-common-screens/kie-wb-common-project-explorer/kie-wb-common-project-explorer-client/src/main/resources/org/kie/workbench/common/screens/explorer/client/resources/i18n/ProjectExplorerConstants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-project-explorer/kie-wb-common-project-explorer-client/src/main/resources/org/kie/workbench/common/screens/explorer/client/resources/i18n/ProjectExplorerConstants_it.properties
@@ -26,7 +26,7 @@ repositoryColon=Repository:
 projectColon=Progetto:
 packageColon=Pacchetto:
 files=File
-customizeView=Personalizza Vista
+customizeView=Personalizza la Vista
 refresh=Aggiorna
 projectView=Vista Progetto
 repositoryView=Vista Repository
@@ -34,13 +34,13 @@ showAsFolders=Mostra come Cartelle
 showAsLinks=Mostra come Collegamenti
 miscellaneous_files=Altro
 LoadingDotDotDot=Caricamento...
-downloadProject=Scarica Progetto
-openProjectEditor=Apri Editor Progetto
+downloadProject=Scarica il Progetto
+openProjectEditor=Apri l''Editor del Progetto
 sort=Ordina
 ClickToDisplay=Clicca per mostrare/nascondere gli asset
 lockHint=Bloccato da
 lockOwnedHint=Bloccato da te
-enableTagFiltering=Abilita Filtraggio per Tag
+enableTagFiltering=Abilita il Filtraggio per Tag
 filterByTag=Filtro per Tag
 none=-- nessuno --
 Search=Cerca
