--- a/kie-wb-common-screens/kie-wb-common-project-imports-editor/kie-wb-common-project-imports-editor-client/src/main/resources/org/kie/workbench/common/screens/projectimportsscreen/client/resources/i18n/ProjectConfigScreenConstants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-project-imports-editor/kie-wb-common-project-imports-editor-client/src/main/resources/org/kie/workbench/common/screens/projectimportsscreen/client/resources/i18n/ProjectConfigScreenConstants_it.properties
@@ -14,15 +14,15 @@
 # limitations under the License.
 #
 ProjectModel=Modello del progetto
-StatefulKSessions=Sessioni KIE stateful
-StatelessKSessions=Sessioni KIE stateless
+StatefulKSessions=Sessioni KIE con stato
+StatelessKSessions=Sessioni KIE senza stato
 EqualsBehavior=Comportamento di uguaglianza
 EventProcessingMode=Modalità di elaborazione degli eventi
 Clock=Orologio
 Realtime=Tempo reale
 Pseudo=Pseudo
-AddKSession=Aggiungi sessione KIE
-DeleteKSession=Elimina sessione KIE
+AddKSession=Aggiungi una sessione KIE
+DeleteKSession=Elimina una sessione KIE
 Add=Aggiungi
 Rename=Rinomina
 MakeDefault=Rendi predefinito
