--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/admin/resources/i18n/PreferencesConstants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/admin/resources/i18n/PreferencesConstants_it.properties
@@ -14,7 +14,7 @@
 ## limitations under the License.
 ##
 LibraryPreferences.Title=Progetti
-ArtifactRepositoryPreferences.Title=Repository Artefatti
+ArtifactRepositoryPreferences.Title=Repository degli Artefatti
 ProfilePreferences.Title=Profili
 #Profile specific properties
 ProfilePreferences.Label=Seleziona un Profilo
