--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants_it.properties
@@ -18,13 +18,13 @@ LogOut=Esci
 HomePage=Home
 Timeline=Cronologia
 People=Persone
-SecurityManagement=Gestione Sicurezza
+SecurityManagement=Gestione della Sicurezza
 ProjectAuthoring=Progetti
-ArtifactRepository=Repository Artefatti
+ArtifactRepository=Repository degli Artefatti
 Administration=Amministrazione
-DroolsAdministration=Amministrazione Drools
-PlannerAdministration=Amministrazione Planner
-Plugins=Gestione Plugin
+DroolsAdministration=Amministrazione di Drools
+PlannerAdministration=Amministrazione di Planner
+Plugins=Gestione dei Plugin
 Apps=Dashboard Aziendali
 DataSets=Set di Dati
 DataSources=Fonti Dati
