--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/WorkbenchConstants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/WorkbenchConstants_it.properties
@@ -21,15 +21,15 @@ TestRunnerReportingViewImpl.CompletedAt=Completato il
 TestRunnerReportingViewImpl.ScenariosRun=Scenari eseguiti
 TestRunnerReportingViewImpl.Duration=Durata
 TestRunnerReportingViewImpl.Overview=Panoramica
-TestRunnerReportingViewImpl.ViewAlerts=Visualizza avvisi
+TestRunnerReportingViewImpl.ViewAlerts=Visualizza gli avvisi
 TestRunnerReportingViewImpl.ScenarioStatus=Stato dello scenario
 TestResultDonutPresenter.Passed=Superato
 TestResultDonutPresenter.Failed=Fallito
 GenericErrorPopup.SystemErrorTitle=Errore di sistema
 GenericErrorPopup.SystemErrorAlert=Si è verificato un errore di sistema imprevisto.
-GenericErrorPopup.SystemErrorDetails=Sono stati verificati eventi imprevisti che il sistema non sapeva come gestire.
-GenericErrorPopup.SystemErrorDetailsInLog=I dettagli sono stati inviati al file di log di sistema.
-GenericErrorPopup.ErrorDetails=Dettagli errore
+GenericErrorPopup.SystemErrorDetails=Sono avvenuti eventi imprevisti che il sistema non sapeva come gestire.
+GenericErrorPopup.SystemErrorDetailsInLog=I dettagli sono nel file di log di sistema.
+GenericErrorPopup.ErrorDetails=Dettagli dell''errore
 GenericErrorPopup.ErrorId=ID: {0}
 GenericErrorPopup.DoNotShowAgainMsg=Non mostrare più questo messaggio per
 GenericErrorPopup.TimeSelectionOneHour=1 ora
