--- a/kie-wb-common-services/kie-wb-common-refactoring/kie-wb-common-refactoring-client/src/main/resources/org/kie/workbench/common/services/refactoring/client/resources/i18n/RefactoringConstants_it.properties
+++ b/kie-wb-common-services/kie-wb-common-refactoring/kie-wb-common-refactoring-client/src/main/resources/org/kie/workbench/common/services/refactoring/client/resources/i18n/RefactoringConstants_it.properties
@@ -1,4 +1,4 @@
-ShowAssetUsagesDisplayerViewViewImpl.title=Notifica Utilizzo
+ShowAssetUsagesDisplayerViewViewImpl.title=Notifica di Utilizzo
 ShowAssetUsagesDisplayerViewViewImpl.assetUsages=Asset: <B><I>{0}</I></B> è utilizzato nei seguenti asset:
 ShowAssetUsagesDisplayerViewViewImpl.partUsages=La parte dell''asset <B><I>{0}</I></B> è utilizzata nel seguente asset:
 ShowAssetUsagesDisplayerViewViewImpl.name=Nome
