--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_it.properties
@@ -43,7 +43,7 @@ MarshallingMessage.reusableSubprocessWithoutDataIO=Subprocess riutilizzabile sen
 SessionCardinalityStateHandler.EmptyStateCaption=Fai clic, trascina o interagisci con un nodo
 SessionCardinalityStateHandler.EmptyStateMessage=Per iniziare, fai clic o trascina un nodo dalla palette a sinistra sulla tela
 
-DownloadDiagram=Scarica diagramma
+DownloadDiagram=Scarica il diagramma
 DiagramParsingError=Si è verificato un errore durante l''analisi del diagramma. Potrebbero esserci nodi non ancora supportati dall''editor o il contenuto XML può contenere errori. Puoi provare a ripararlo manualmente. {0}
-ScreenExplorerTitle=Esplora diagramma
+ScreenExplorerTitle=Esplora il diagramma
 Documentation=Documentazione
