--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-client-api/src/main/resources/org/kie/workbench/common/stunner/core/client/preferences/resources/i18n/StunnerPreferencesConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-client-api/src/main/resources/org/kie/workbench/common/stunner/core/client/preferences/resources/i18n/StunnerPreferencesConstants_it.properties
@@ -17,12 +17,12 @@
 ########################
 #StunnerPreferences
 ########################
-StunnerPreferences.Label=Preferenze Stunner
-StunnerPreferences.StunnerDiagramEditorPreferences=Preferenze Editor Diagramma Stunner
-StunnerDiagramEditorPreferences.Label=Campi Preferenze Editor Diagramma
+StunnerPreferences.Label=Preferenze per Stunner
+StunnerPreferences.StunnerDiagramEditorPreferences=Preferenze per l''Editor di Diagramma di Stunner
+StunnerDiagramEditorPreferences.Label=Campi di Preferenze per l''Editor di Diagramma
 StunnerDiagramEditorPreferences.AutoHidePalettePanel.Label=Nascondi automaticamente il pannello delle categorie
-StunnerDiagramEditorPreferences.AutoHidePalettePanel.Help=Abilita la nascita automatica del pannello degli strumenti associato a una categoria. Ad esempio, quando viene selezionato un elemento di categoria o quando il mouse esce dal pannello.
+StunnerDiagramEditorPreferences.AutoHidePalettePanel.Help=Nascondi automaticamente il pannello degli strumenti associato a una categoria. Ad esempio, quando viene selezionato un elemento di categoria o quando il mouse esce dal pannello.
 StunnerDiagramEditorPreferences.EnableHiDpi.Label=Abilita HiDPI
 StunnerDiagramEditorPreferences.EnableHiDpi.Help=Abilita questa opzione se stai utilizzando un display ad alta risoluzione e stai riscontrando testi e oggetti sfocati. Attualmente questa opzione è disabilitata di default a causa di problemi di prestazioni HiDPI gravi con Chrome su Mac.
 
-PropertyValidator.CanvasSizeValidator.InvalidOutOfRange=Il valore è fuori range.
+PropertyValidator.CanvasSizeValidator.InvalidOutOfRange=Il valore è fuori scala.
