--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-commons/kie-wb-common-stunner-core-common/src/main/resources/org/kie/workbench/common/stunner/core/resources/i18n/StunnerCoreConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-commons/kie-wb-common-stunner-core-common/src/main/resources/org/kie/workbench/common/stunner/core/resources/i18n/StunnerCoreConstants_it.properties
@@ -62,11 +62,11 @@ org.kie.workbench.common.stunner.core.client.toolbox.morphInto=Converti in
 #######################
 # Toolbar
 #######################
-org.kie.workbench.common.stunner.core.client.toolbox.CopySelection=Copia selezione
-org.kie.workbench.common.stunner.core.client.toolbox.CutSelection=Taglia selezione
-org.kie.workbench.common.stunner.core.client.toolbox.PasteSelection=Incolla selezione
-org.kie.workbench.common.stunner.core.client.toolbox.ClearShapes=Cancella stati delle forme
-org.kie.workbench.common.stunner.core.client.toolbox.ClearDiagram=Cancella diagramma
+org.kie.workbench.common.stunner.core.client.toolbox.CopySelection=Copia la elezione
+org.kie.workbench.common.stunner.core.client.toolbox.CutSelection=Taglia la selezione
+org.kie.workbench.common.stunner.core.client.toolbox.PasteSelection=Incolla la selezione
+org.kie.workbench.common.stunner.core.client.toolbox.ClearShapes=Cancella lo stato delle forme
+org.kie.workbench.common.stunner.core.client.toolbox.ClearDiagram=Cancella il diagramma
 org.kie.workbench.common.stunner.core.client.toolbox.DeleteSelection=Elimina selezione [DEL]
 org.kie.workbench.common.stunner.core.client.toolbox.ExportJPG=Scarica come JPG
 org.kie.workbench.common.stunner.core.client.toolbox.ExportPDF=Scarica come PDF
