--- a/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-jbpm-designer-integration/kie-wb-common-stunner-jbpm-designer-integration-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/integration/client/resources/i18n/IntegrationClientConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-jbpm-designer-integration/kie-wb-common-stunner-jbpm-designer-integration-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/integration/client/resources/i18n/IntegrationClientConstants_it.properties
@@ -13,8 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-integration.actions.migrate=Migra Diagramma
-integration.actions.migrateTitle=Migra Diagramma
+integration.actions.migrate=Migra il Diagramma
+integration.actions.migrateTitle=Migra il Diagramma
 integration.actions.migrate.toJBPMDesigner.migrateWarning=Attenzione, questa azione non può essere annullata.
 integration.actions.migrate.toJBPMDesigner.migrateConfirmAction=La migrazione del diagramma preparerà il file corrente per essere modificato dal vecchio designer jBPM. Questa azione non può essere annullata. Procedere con cautela.
 integration.actions.migrate.toJBPMDesigner.migrateCommitMessage=Il file {0} è stato migrato dal nuovo Business Process Modeler al designer jBPM.
