--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants_it.properties
@@ -31,8 +31,8 @@ Data_Output_and_Assignment=Output Dati e Assegnazione
 Data_Outputs_and_Assignments=Output Dati e Assegnazioni
 Data_IO=Data I/O
 Edit=Modifica
-Enter_expression=Inserisci espressione
-Enter_type=Inserisci tipo
+Enter_expression=Inserisci l''espressione
+Enter_type=Inserisci il tipo
 Error_retrieving_datatypes=Errore durante il recupero dei tipi di dati
 Invalid_character_in_name=Carattere non valido nel nome
 Invalid_character_in_value=Carattere non valido nel valore
