--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-project-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/project/client/resources/i18n/BPMNClientConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-project-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/project/client/resources/i18n/BPMNClientConstants_it.properties
@@ -1,14 +1,14 @@
 BPMNDiagramResourceType.shortName=Processo Aziendale
 BPMNDiagramResourceType.description=Processi Aziendali
 
-editor.forms.title=Generazione Form
-editor.forms.generateProcessForm=Genera form del processo
+editor.forms.title=Generazione del Form
+editor.forms.generateProcessForm=Genera il form del processo
 editor.forms.generateAllForms=Genera tutti i form
-editor.forms.generateSelectionForms=Genera form per la selezione
+editor.forms.generateSelectionForms=Genera il form per la selezione
 
 editor.actions.migrateMenu=Migra
-editor.actions.migrate=Migra Diagramma
-editor.actions.migrateTitle=Migra Diagramma
+editor.actions.migrate=Migra il Diagramma
+editor.actions.migrateTitle=Migra il Diagramma
 editor.actions.migrateWarning=Attenzione, questa azione non può essere annullata.
 editor.actions.migrateConfirmAction=La migrazione del diagramma preparerà il file corrente per essere modificato dal designer jBPM. Non sarà possibile annullare questa azione. Procedere con cautela.
 editor.actions.migrateCommitMessage=Il file {0} è stato migrato da Stunner a jBPM designer
@@ -16,6 +16,6 @@ editor.actions.migrateErrorProcessAlreadyExists=Esiste già un processo jBPM des
 editor.actions.migrateErrorGeneric=Si è verificato un errore durante la migrazione
 
 editor.error.generateSvgFileError=Si è verificato un errore durante la generazione del file svg del diagramma
-editor.error.subprocessNotFound=Subprocess {0} non trovato.
+editor.error.subprocessNotFound=Sottoprocesso {0} non trovato.
 editor.error.subprocessNotSpecified=ID del sottoprocesso non specificato.
-editor.toolbox.openSubprocessToolboxAction=Apri sottoprocesso
+editor.toolbox.openSubprocessToolboxAction=Apri il sottoprocesso
