--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_it.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_it.properties
@@ -7,7 +7,7 @@ June=Giugno
 July=Luglio
 August=Agosto
 October=Ottobre
-September=SettembreItalian
+September=Settembre
 November=Novembre
 December=Dicembre
 OK=OK
