--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/HumanReadableConstants_it.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/HumanReadableConstants_it.properties
@@ -4,7 +4,7 @@ isEqualToNull=è nullo
 isNotEqualToNull=non è nullo
 isLessThan=minore di
 lessThanOrEqualTo=minore o uguale a
-greaterThan>maggiore di
+greaterThan=maggiore di
 greaterThanOrEqualTo=maggiore o uguale a
 orEqualTo=o uguale a
 orNotEqualTo=o diverso da
@@ -22,7 +22,7 @@ orContains=o contiene
 andMatches=e corrisponde a
 orMatches=o corrisponde a
 orExcludes=o esclude
-andExcludes=e esclude
+andExcludes=ed esclude
 soundsLike=suona come
 memberOf=appartenente a
 ThereIsNo=Non esiste quanto segue
@@ -45,14 +45,14 @@ orStarts=o inizia
 orStartedBy=o iniziato da
 addDuring=e durante
 andFinishes=e finisce
-andFinishedBy=e finito da
+andFinishedBy=ed è finito da
 andIncluded=e incluso
 andMeets=e incontra
-andMetBy=e incontrato da
+andMetBy=ed è incontrato da
 andOverlaps=e sovrappone
-andOverlappedBy=e sovrapposto da
+andOverlappedBy=ed è sovrapposto da
 andStarts=e inizia
-andStartedBy=e iniziato da
+andStartedBy=ed è iniziato da
 AnyOf1=Qualsiasi delle seguenti è vera
 isContainedInTheFollowingList=è contenuto nell''elenco (separato da virgole)
 isNotContainedInTheFollowingList=non è contenuto nell''elenco (separato da virgole)
