--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/KieWorkbenchWidgetsConstants_it.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/KieWorkbenchWidgetsConstants_it.properties
@@ -5,7 +5,7 @@ KSessionSelectorViewImpl.SelectedKSessionDoesNotExist=La sessione KIE selezionat
 NewResourceViewImpl.popupTitle=Crea nuovo
 NewResourceViewImpl.itemNameSubheading=Nome:
 NewResourceViewImpl.fileNameIsMandatory=Nome mancante per la nuova risorsa. Inserisci il nome.
-NewResourceViewImpl.resourceName=Nome risorsa
+NewResourceViewImpl.resourceName=Nome della risorsa
 NewResourceViewImpl.packageName=Pacchetto
 NewResourceViewImpl.resourceNamePlaceholder=Nome...
 NewResourceViewImpl.MissingPath=Manca il percorso in cui creare la nuova risorsa. Inserisci il percorso.
