--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/ToolsMenuConstants_it.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/ToolsMenuConstants_it.properties
@@ -17,9 +17,9 @@
 ProjectEditor=Editor di Progetto
 RepositoryStructure=Struttura del Repository
 DataModeller=Modellatore dei Dati
-RemoveProject=Rimuovi Progetto
-RenameProject=Rinomina Progetto
-CopyProject=Copia Progetto
+RemoveProject=Rimuovi il Progetto
+RenameProject=Rinomina il Progetto
+CopyProject=Copia il Progetto
 CategoriesEditor=Editor delle Categorie
 LatestVersion=Ultima Versione
 Version=Versione {0}
