--- a/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_it.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_it.properties
@@ -14,16 +14,16 @@
 # limitations under the License.
 #
 ProvisioningManagementBrowserView.Title=Gestione del provisioning del browser
-EnableProviderTypeWizard.Title=Abilitazione tipo provider
-EnableProviderTypeWizard.ProviderTypeEnableSuccessMessage=Tipo provider abilitato
+EnableProviderTypeWizard.Title=Abilitazione del tipo di provider
+EnableProviderTypeWizard.ProviderTypeEnableSuccessMessage=Tipo di provider abilitato
 EnableProviderTypeWizard.ProviderTypeEnableErrorMessage=Si è verificato un errore durante l''abilitazione dei tipi di provider
-EnableProviderTypePageView.Title=Seleziona tipo
+EnableProviderTypePageView.Title=Seleziona il tipo
 NewProviderWizard.Title=Nuovo provider
 NewProviderWizard.ProviderCreateSuccessMessage=Provider creato con successo
 NewProviderWizard.ProviderNotProperlyConfiguredInSystemErrorMessage=Il tipo di provider: {0} non è configurato correttamente
 NewDeployWizard.Title=Nuovo deployment
 NewDeployWizard.PipelineStartSuccessMessage=Pipeline avviata con successo
-SelectPipelinePageView.Title=Seleziona pipeline
+SelectPipelinePageView.Title=Seleziona la pipeline
 SourceConfigurationPageView.Title=Selezione sorgente
 SourceConfigurationPageView.RuntimeName=Runtime
 SourceConfigurationPageView.OU=Unità organizzativa
@@ -36,15 +36,15 @@ ContainerConfigPresenter.ContainerNameAlreadyInUseErrorMessage=Questo nome del c
 ContainerConfigPresenter.InvalidContainerNameErrorMessage=I nomi dei contenitori possono contenere solo lettere, numeri, trattini e due punti
 ContainerConfigPresenter.AllFieldsMustBeCompletedErrorMessage=Tutti i campi devono essere compilati correttamente
 ContainerConfigView.ContainerName=Nome
-ContainerConfigView.GroupId=Nome gruppo
-ContainerConfigView.ArtifactId=ID artefatto
+ContainerConfigView.GroupId=Nome del gruppo
+ContainerConfigView.ArtifactId=ID del''artefatto
 ContainerConfigView.Version=Versione
 ContainerConfigView.FindArtifact=Trova artefatto disponibile
 ContainerConfigParamsPresenter.AddContainerPopupTitle=Aggiungi contenitore
 ContainerConfigParamsView.Title=Aggiungi contenitori
 ContainerConfigParamsView.ContainerNameColumn=Nome
 ContainerConfigParamsView.GroupIdColumn=Nome gruppo
-ContainerConfigParamsView.ArtifactIdColumn=ID artefatto
+ContainerConfigParamsView.ArtifactIdColumn=ID dell''artefatto
 ContainerConfigParamsView.VersionColumn=Versione
 ContainerConfigParamsView.ContainersEmptyTableCaption=Nessun contenitore è stato aggiunto
 ContainerConfigParamsView.Delete=Elimina
@@ -53,7 +53,7 @@ ContainerConfigParamsView.AddContainer=Aggiungi contenitore
 ArtifactSelectorView.Search=Cerca
 ArtifactSelectorView.SelectColumn=Seleziona
 ProviderView.ConfirmRemovePopupMessage=Sei sicuro di voler rimuovere il provider corrente?
-ProviderView.ConfirmRemovePopupTitle=Rimuovi provider
+ProviderView.ConfirmRemovePopupTitle=Rimuovi il provider
 ProviderView.ProviderCantBeDeletedMessage=Un provider con runtime associati non può essere eliminato.
 ProviderView.Deploy=Deploy
 ProviderView.Refresh=Aggiorna
@@ -90,28 +90,28 @@ ProviderConfigEmptyView.ProviderTypeNotProperlyConfiguredMessage=Il tipo di prov
 RuntimePresenter.RuntimeStartAction=Avvia runtime
 RuntimePresenter.RuntimeStopAction=Arresta runtime
 RuntimePresenter.RuntimeDeleteAction=Elimina runtime
-RuntimePresenter.RuntimeStartingMessage=Avvio runtime
+RuntimePresenter.RuntimeStartingMessage=Avvio del runtime
 RuntimePresenter.RuntimeStartSuccessMessage=Runtime: {0} avviato con successo
-RuntimePresenter.RuntimeStoppingMessage=Arresto runtime
+RuntimePresenter.RuntimeStoppingMessage=Arresto del runtime
 RuntimePresenter.RuntimeStopSuccessMessage=Runtime: {0} arrestato con successo
-RuntimePresenter.RuntimeDeletingMessage=Eliminazione runtime
-RuntimePresenter.RuntimeDeletingForcedMessage=Eliminazione forzata runtime
+RuntimePresenter.RuntimeDeletingMessage=Eliminazione del runtime
+RuntimePresenter.RuntimeDeletingForcedMessage=Eliminazione forzata del runtime
 RuntimePresenter.RuntimeDeleteSuccessMessage=Runtime: {0} eliminato con successo
-RuntimePresenter.RuntimeDeleteFailedTitle=Eliminazione runtime non riuscita
+RuntimePresenter.RuntimeDeleteFailedTitle=Eliminazione del runtime non riuscita
 RuntimePresenter.RuntimeDeleteFailedMessage=L''operazione di eliminazione ha generato il seguente errore:<BR> {0} <BR><BR>Vuoi forzare l''eliminazione del runtime?
-RuntimePresenter.RuntimeConfirmForcedDeleteTitle=Forza eliminazione runtime
+RuntimePresenter.RuntimeConfirmForcedDeleteTitle=Forza l''eliminazione del runtime
 RuntimePresenter.RuntimeConfirmForcedDeleteMessage=Sei sicuro di voler forzare l''eliminazione del runtime?
 RuntimePresenter.RuntimeConfirmDeleteTitle=Elimina runtime
 RuntimePresenter.RuntimeConfirmDeleteMessage=Sei sicuro di voler eliminare il runtime?
 RuntimePresenter.RuntimeConfirmStopTitle=Arresta runtime
 RuntimePresenter.RuntimeConfirmStopMessage=Sei sicuro di voler arrestare il runtime?
-RuntimePresenter.PipelineExecutionStopAction=Arresta esecuzione pipeline
-RuntimePresenter.PipelineExecutionDeleteAction=Elimina esecuzione pipeline
-RuntimePresenter.PipelineExecutionShowErrorAction=Mostra errore pipeline
+RuntimePresenter.PipelineExecutionStopAction=Arresta l''esecuzione della pipeline
+RuntimePresenter.PipelineExecutionDeleteAction=Elimina l''esecuzione della pipeline
+RuntimePresenter.PipelineExecutionShowErrorAction=Mostra l''errore della pipeline
 RuntimePresenter.PipelineExecutionStopSuccessMessage=Esecuzione pipeline: {0} arrestata con successo
 RuntimePresenter.PipelineExecutionDeleteSuccessMessage=Esecuzione pipeline: {0} eliminata con successo
 RuntimePresenter.PipelineExecutionConfirmDeleteTitle=Elimina registrazione esecuzione pipeline
 RuntimePresenter.PipelineExecutionConfirmDeleteMessage=Sei sicuro di voler eliminare la registrazione dell''esecuzione della pipeline?
-RuntimePresenter.PipelineExecutionConfirmStopTitle=Arresta esecuzione pipeline
+RuntimePresenter.PipelineExecutionConfirmStopTitle=Arresta l''esecuzione della pipeline
 RuntimePresenter.PipelineExecutionConfirmStopMessage=Sei sicuro di voler arrestare la pipeline?
 RuntimePresenter.PipelineExecutionAlreadyStoppedMessage=Sembra che l''esecuzione della pipeline sia già stata arrestata o sia terminata
