--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_it.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_it.properties
@@ -13,7 +13,7 @@
 # limitations under the License.
 #
 
-MarshallingMessage.boundaryIgnored=Relazione di confine ignorata. Elemento di confine: {0}, Genitore: {1}
+MarshallingMessage.boundaryIgnored=Relazione di limite ignorata. Elemento di confine: {0}, Genitore: {1}
 MarshallingMessage.associationIgnored=Associazione ignorata. Sorgente: {0}, Destinazione: {1}
 MarshallingMessage.sequenceFlowIgnored=Flusso di sequenza ignorato. Sorgente: {0}, Destinazione: {1}
 MarshallingMessage.collapsedElementExpanded=Elemento compresso {0} di tipo {1} è stato espanso
