--- a/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_it.properties
+++ b/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_it.properties
@@ -16,7 +16,7 @@
 Title=Titolo
 Metadata=Metadati
 LastModified=Ultima modifica
-ModifiedByMetaData=da
+ModifiedByMetaData=Da
 NoteMetaData=Nota
 CreatedOnMetaData=Creato il
 CreatedByMetaData=Creato da
@@ -29,7 +29,7 @@ ExternalLinkMetaData=Link esterno
 ExternalLinkTip=Questo serve per collegare l''asset a un sistema esterno
 SourceMetaData=Origine
 SourceMetaDataTip=Una breve descrizione o codice che indica la fonte della regola
-VersionHistory=Storico versioni
+VersionHistory=Cronologia delle versioni
 SubjectMetaData=Soggetto
 PleaseWait=Attendere...
 Refresh=Aggiorna
@@ -44,7 +44,7 @@ EraseAllComments=Cancella tutti i commenti
 EraseAllCommentsWarning=Cancellare TUTTI gli elementi di discussione? NOTA che QUESTO NON può essere annullato. Sei sicuro?
 Cancel=Annulla
 smallCommentBy0On1Small=<small>Commento di {0} il {1}:</small>
-VersionHistory1=Storico versioni
+VersionHistory1=Cronologia delle versioni
 NoHistory=Nessuna cronologia.
 View=Visualizza
 property0ModifiedOn1By23={0} modificato il: {1} da {2} ({3})
