--- a/kie-wb-common-services/kie-wb-common-verifier/kie-wb-common-verifier-reporting-client/src/main/java/org/kie/workbench/common/services/verifier/reporting/client/resources/i18n/AnalysisConstants_it.properties
+++ b/kie-wb-common-services/kie-wb-common-verifier/kie-wb-common-verifier-reporting-client/src/main/java/org/kie/workbench/common/services/verifier/reporting/client/resources/i18n/AnalysisConstants_it.properties
@@ -51,7 +51,7 @@ RedundantConditionsNote1P2=Le condizioni ridondanti sono {0} e {1}
 RedundantRowsP1=La ridondanza esiste quando due righe fanno le stesse azioni con lo stesso insieme di fatti forniti.
 RedundantRowsP2=La ridondanza potrebbe non essere un problema se le regole ridondanti impostano un valore su un fatto esistente, questo imposta il valore due volte. I problemi si verificano quando le due regole aumentano un contatore o aggiungono più fatti nella memoria di lavoro. In entrambi i casi, l''altra riga non è necessaria.
 RedundantRowsP3=Per risolvere il problema, rimuovere una delle righe ridondanti.
-SubsumptantRowsP1=L'inclusione esiste quando una riga fa la stessa cosa di un''altra, con un sottoinsieme dei valori/fatti di un''altra regola.
+SubsumptantRowsP1=L''inclusione esiste quando una riga fa la stessa cosa di un''altra, con un sottoinsieme dei valori/fatti di un''altra regola.
 SubsumptantRowsP2=Queste regole potrebbero inserire fatti duplicati nella memoria di lavoro o eseguire funzioni due volte. Se questo non è il comportamento previsto, rimuovere la riga subsumptant o renderla più restrittiva.
 AnalysingChecks0To1Of2=Esecuzione controlli {0} a {1} di {2}...
 MissingRangeTitle=Intervallo mancante
